fix(chipinput): update horizontal-vertical spacing and custom icon state

--- a/css/src/components/chipInput.css
+++ b/css/src/components/chipInput.css
@@ -1,14 +1,31 @@
 .ChipInput {
-  box-sizing: border-box;
   display: flex;
   border-radius: var(--spacing-m);
-  border: var(--border);
-  padding-left: var(--spacing-s);
-  padding-top: var(--spacing-xs);
-  padding-bottom: var(--spacing-xs);
+  box-shadow: inset 0 0 0 var(--spacing-xs) var(--secondary);
+  padding-left: 10px;
+  padding-right: 10px;
   background: var(--white);
   cursor: text;
   flex: 100%;
+}
+
+.ChipInput:focus,
+.ChipInput:focus-visible {
+  outline: var(--spacing-xs) var(--primary);
+}
+
+.ChipInput:focus-within {
+  box-shadow: inset 0 0 0 var(--spacing-xs) var(--primary);
+}
+
+.ChipInput--disabled {
+  background: var(--secondary-lightest);
+  border-color: var(--secondary-light);
+  pointer-events: none;
+}
+
+.ChipInput--withChips {
+  padding-right: var(--spacing);
 }
 
 .ChipInput-wrapper {
@@ -18,15 +35,9 @@
   flex-wrap: wrap;
 }
 
-.ChipInput:focus-within {
-  border-color: var(--primary);
+.ChipInput-border:focus-within {
+  border-radius: var(--spacing-m);
   box-shadow: var(--shadow-spread) var(--primary-shadow);
-}
-
-.ChipInput--disabled {
-  background: var(--secondary-lightest);
-  border-color: var(--secondary-light);
-  pointer-events: none;
 }
 
 .ChipInput-input {
@@ -38,17 +49,30 @@
   flex: 0px;
   box-sizing: border-box;
   height: var(--spacing-xl);
-  margin-top: var(--spacing-s);
-  margin-bottom: var(--spacing-s);
-  padding-left: var(--spacing-m);
+  margin-top: var(--spacing-m);
+  margin-bottom: var(--spacing-m);
   font-family: var(--font-family);
   font-size: var(--font-size);
 }
 
 .ChipInput-icon {
   height: var(--spacing-2);
-  margin-top: var(--spacing-m);
-  padding-top: var(--spacing-s);
-  margin-right: var(--spacing-l);
+  padding: var(--spacing-s);
+  margin-left: var(--spacing);
+  margin-top: 6px;
   cursor: pointer;
+  border-radius: 10px;
+}
+
+.ChipInput-icon:hover {
+  background-color: var(--secondary);
+}
+
+.ChipInput-icon:active {
+  background-color: var(--secondary-dark);
+}
+
+.ChipInput-icon:focus,
+.ChipInput-icon:focus-visible {
+  outline: var(--spacing-s) solid var(--secondary-shadow);
 }
